<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    android:layout_margin="1dp">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="428dp"
        android:orientation="vertical"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.089"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tvstory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivstory"
            android:layout_width="wrap_content"
            android:layout_height="311dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/share" />

        <ProgressBar
            android:id="@+id/loadstory"
            style="?android:attr/progressBarStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.cardview.widget.CardView>