<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".upload.UploadActivity">

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="398dp"
        android:layout_height="443dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ex_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editdesc"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/navi"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/editdesc"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/navi"
        android:text="@string/Gallery"
        app:layout_constraintBottom_toTopOf="@+id/editdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toEndOf="@+id/btn_camera" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/navi"
        android:text="@string/Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>